  configure flag with the argument `download` to download, build, and
  install the library during make time. Please note that CMake 3+ is
  required.
  All adapters, except for the Pthreads adapter, are now enabled by
  default when instrumenting an application. However, they need to be
  explicitly enabled at measurement time. To enable the POSIX I/O adapter,
  use `SCOREP_IO_POSIX=yes`.
  User library wrappers can now be loaded as plug-ins at runtime using
  `SCOREP_LIBWRAP_ENABLE=<library...>` instead of being specified at the
  time of instrumentation with the `--libwrap=<library...>` flag. In
  conjunction, the `--libwrap=` parameter has been removed from the
  Score-P instrumenter. Users who have library wrappers from previous
  Score-P versions will need to rebuild them. Refer to the `--update`
  option for `scorep-libwrap-init` to learn how to achieve this.

Features and improvements:

- The CUDA adapter now uses Score-P timestamps for CUPTI events directly
  instead of converting CUPTI timestamps with CUDA 11.6 and newer. Older
  CUDA versions still use the previous implementation. This may prevent
  timestamp issues seen with previous Score-P versions.
- The OMPT adapter has these new features: Improved support for OpenMP
  tasks, including detach, yield, taskwait depend, taskloops and
  cancelled tasks. Support for implementation-based barriers generated
  by the OpenMP runtime. Support for the teams directive, which is
  handled like parallel regions with different naming. Support for the
  distribute directive.
- In BFD-based addr2line lookup, ignore `ld-linux[x].so` whose search
  address ranges have been reported to overlap with those of
  runtime-loaded libraries. In addition, take overlapping
  address-ranges into account. Previously, only the first matching
  address range was searched.
- The NVTX portion of the CUDA adapter is now injected automatically
  when NVTX v3 (CUDA 10.0+) was found during configure. For shared