@@ -50,6 +50,20 @@ SCOREP_Instrumenter_OpenCLAdapter::SCOREP_Instrumenter_OpenCLAdapter( void )
 #endif
 }
 
+bool
+SCOREP_Instrumenter_OpenCLAdapter::checkOption( const std::string& arg )
+{
+    if ( arg == "--" + m_name || arg == "--no" + m_name )
+    {
+        std::cerr <<
+            "[Score-P] WARNING: Option '" << arg << "' is deprecated.\n" <<
+            "                   Instrumentation is always performed, but must be activated at the time of measurement." <<
+            std::endl;
+    }
+
+    return SCOREP_Instrumenter_Adapter::checkOption( arg );
+}
+
 std::string
 SCOREP_Instrumenter_OpenCLAdapter::getConfigToolFlag( SCOREP_Instrumenter_CmdLine& /* cmdLine */,
                                                       const std::string& /* inputFile */ )
